fix2 ssl cert verification